--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
+      - ./back.sql:/docker-entrypoint-initdb.d/back.sql
     networks:
       - backend
     healthcheck:
