--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./back.sql:/docker-entrypoint-initdb.d/back.sql
+      - ./backup.sql:/docker-entrypoint-initdb.d/backup.sql
     networks:
       - backend
     healthcheck:
