--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,15 @@
 services:
-  db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: ${mypassword}
-      MYSQL_DATABASE: TaipeiDayTrip
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     ports:
-      - "3307:3306"
+      - "80:80"
+      - "443:443"
     volumes:
-      - db_data:/var/lib/mysql
-      - ./backup.sql:/docker-entrypoint-initdb.d/backup.sql
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt
     networks:
-      - backend
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - webnet
 
   web:
     build: .
@@ -25,9 +18,6 @@ services:
       - .:/app
     ports:
       - "8000:8000"
-    depends_on:
-      db:
-        condition: service_healthy
     environment:
       mypassword: ${mypassword}
       mykey: ${mykey}
