--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt
     networks:
-      - webnet
+      - backend
 
   web:
     build: .
@@ -24,10 +24,6 @@ services:
       partner_key: ${partner_key}
     networks:
       - backend
-
-
-volumes:
-  db_data:
 
 networks:
   backend:
