--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     networks:
       - backend
 
-  web:
+  app:
     build: .
     command: uvicorn app:app --host 0.0.0.0 --port 8000
     volumes:
